# BurbWatch

./: .editorconfig  .gitignore  CMakeLists.txt
src/: Common.hpp  FrameProcessor.cpp  FrameProcessor.h  FrameSaver.cpp  FrameSaver.hpp  FrameSource.cpp  FrameSource.h  Image.cpp  Image.h  MotionDetector.cpp  MotionDetector.hpp  main.cpp
